--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,14 @@
-<footer>
-  <h1>This is website Footer</h1>
+<footer class="min-h-48">
+  <div class="max-w-screen-xl mx-auto px-2 flex my-20 items-center justify-between">
+    <div>
+      <h1>This is website Footer</h1>
+    </div>
+
+    <div>
+      <a href="#">Linkedin</a>
+      <a href="#">Youtube</a>
+      <a href="#">Facebook</a>
+      <a href="#">Twitter</a>
+    </div>
+  </div>
 </footer>
