--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,17 +1,17 @@
-<nav class="border-b py-4">
-  <div class="container mx-auto px-2 flex items-center justify-between">
+<nav class="bg-blue-900">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
     <div>
       <h1>My Logo</h1>
     </div>
     <div>
-      <a href="#">Home</a>
-      <a href="#">Blogs</a>
-      <a href="#">Pricing</a>
-      <a href="#">About us</a>
-    </div>
-    <div>
-      <a href="#">Login</a>
-      <a href="#">Buy Subscription</a>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Contact us</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Shadule a Call</a></li>
+      </ul>
     </div>
   </div>
 </nav>
