--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,45 @@
-<header>
-  <div class="container px-2 mx-auto">
-    <h1 class="text-7xl uppercase">
-      Grow Your Business with <b>MyCloudSolution</b>
-    </h1>
+<header class="min-h-screen relative overflow-hidden">
+
+  <nav class="h-20 border-b border-[#4444447c]">
+    <div class="h-full max-w-screen-xl mx-auto px-2 flex justify-between items-center">
+      <div>Logo</div>
+      <div class="flex items-center">
+          <a href="#" class="px-8 py-2">Home</a>
+          <a href="#" class="px-8 py-2">Contact</a>
+          <a href="#" class="px-8 py-2">About</a>
+          <a href="#" class="px-8 py-2">Services</a>
+          <a href="#" class="px-8 py-2">Careers</a>
+          <a href="#" class="text-white border border-[#4444447c] px-4 py-2 rounded block w-[150px] text-center">Shadule a Call</a>
+      </div>
+    </div>
+  </nav>
+  
+  
+  <div class="max-w-screen-xl mx-auto px-2 flex my-20">
+    <div class="flex-[3]">
+      <h1 class="text-6xl font-bold leading-snug">
+        Transform Your Vision into Cutting-Edge Digital Solutions
+      </h1>
+      <p class="text-gray-500 mt-6 leading-relaxed">
+        We specialize in converting your Figma designs into flawless code,
+        building robust e-commerce platforms, integrating AI to enhance your
+        business, and crafting scalable backend systems. Leveraging modern
+        technologies like Node.js, React, Golang, and AWS, we deliver solutions
+        that drive your success.
+      </p>
+      <a href="#" class="text-white border border-[#4444447c] px-4 py-4 rounded block w-[180px] text-center mt-5">Hire Us</a>
+    </div>
+    <div class="flex-[1]"></div>
+  </div>
+
+  <div
+    class="bg-[#14b8a5] w-[140px] h-[200px] rounded-md absolute -right-24 top-10 blur-[90px] z-10"
+  >
+  </div>
+  <div
+    class="bg-[#78fdeda5] w-[140px] h-[300px] rounded-md absolute -left-20 top-44 blur-[100px] z-10"
+  >
   </div>
 </header>
+
+<style></style>
