--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
-import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
+import Services from "../components/Services.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
-    <Navbar />
+  <main class="bg-[#000] text-white">
+    <!-- <Navbar /> -->
     <Header />
+    <Services />
+    <Footer />
   </main>
 </Layout>
 
