--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,7 @@
     <div>
       <a href="#">Linkedin</a>
       <a href="#">Youtube</a>
+      <a href="#">Instagram</a>
       <a href="#">Facebook</a>
       <a href="#">Twitter</a>
     </div>
