--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,4 @@
 <header class="min-h-screen relative overflow-hidden">
-
-  <nav class="h-20 border-b border-[#4444447c]">
-    <div class="h-full max-w-screen-xl mx-auto px-2 flex justify-between items-center">
-      <div>Logo</div>
-      <div class="flex items-center">
-          <a href="#" class="px-8 py-2">Home</a>
-          <a href="#" class="px-8 py-2">Contact</a>
-          <a href="#" class="px-8 py-2">About</a>
-          <a href="#" class="px-8 py-2">Services</a>
-          <a href="#" class="px-8 py-2">Careers</a>
-          <a href="#" class="text-white border border-[#4444447c] px-4 py-2 rounded block w-[150px] text-center">Shadule a Call</a>
-      </div>
-    </div>
-  </nav>
-  
-  
   <div class="max-w-screen-xl mx-auto px-2 flex my-20">
     <div class="flex-[3]">
       <h1 class="text-6xl font-bold leading-snug">
@@ -27,7 +11,11 @@
         technologies like Node.js, React, Golang, and AWS, we deliver solutions
         that drive your success.
       </p>
-      <a href="#" class="text-white border border-[#4444447c] px-4 py-4 rounded block w-[180px] text-center mt-5">Hire Us</a>
+      <a
+        href="#"
+        class="text-white border border-[#4444447c] px-4 py-4 rounded block w-[180px] text-center mt-5"
+        >Hire Us</a
+      >
     </div>
     <div class="flex-[1]"></div>
   </div>
