--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,17 +1,22 @@
-<nav class="bg-blue-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto">
+<nav class="h-20 border-b border-[#4444447c]">
+  <div
+    class="h-full max-w-screen-xl mx-auto px-2 flex justify-between items-center"
+  >
     <div>
-      <h1>My Logo</h1>
+      <a href="/"><h1 class="text-2xl">LanceFree<span class="font-bold text-[#14b8a5]">Devs</span></h1></a>
     </div>
-    <div>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Shadule a Call</a></li>
-      </ul>
+    <div class="flex items-center">
+      <a href="/" class="px-8 py-2">Home</a>
+      <a href="/contact" class="px-8 py-2">Contact</a>
+      <a href="/about" class="px-8 py-2">About</a>
+      <a href="/blogs" class="px-8 py-2">Blogs</a>
+      <a href="/services" class="px-8 py-2">Services</a>
+      <a href="/careers" class="px-8 py-2">Careers</a>
+      <a
+        href="#"
+        class="text-white border border-[#4444447c] px-4 py-2 rounded block w-[150px] text-center"
+        >Shadule a Call</a
+      >
     </div>
   </div>
 </nav>
