--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,7 +1,71 @@
 <section class="min-h-48">
     <div class="max-w-screen-xl mx-auto px-2 flex my-20">
         <div>
-            <h1>This is services section</h1>
+            <div class="grid grid-cols-3 gap-24">
+                <div>
+                    <h3 class="font-bold text-xl">Figma to Code</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">AI-Intergration</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">E-Commerce Solutions</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">Maintaining</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">Enterpirse Backend Solutions</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">Cloud Solutions</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">Database Administration</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">SEO</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-xl">UI / UX</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Odio, repellat.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
