--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,17 @@ import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Services from "../components/Services.astro";
+import TechStack from "../components/TechStack.astro";
+import Navbar from "../components/Navbar.astro";
+import Testimonials from "../components/Testimonials.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="bg-[#000] text-white">
-    <!-- <Navbar /> -->
+  <main>
     <Header />
     <Services />
-    <Footer />
+    <TechStack />
+    <Testimonials />
   </main>
 </Layout>
 
