--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Footer from "../components/Footer.astro";
+import Navbar from "../components/Navbar.astro";
+
 interface Props {
   title: string;
 }
@@ -16,8 +19,10 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-[#000] text-white">
+    <Navbar />
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global></style>
