--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,62 @@
-<footer class="min-h-48">
-  <div class="max-w-screen-xl mx-auto px-2 flex my-20 items-center justify-between">
-    <div>
-      <h1>This is website Footer</h1>
+---
+import { Icon } from "astro-icon/components";
+---
+
+<footer class="min-h-48 border-t border-[#4444447c]">
+  <div class="max-w-screen-xl mx-auto px-2 py-5">
+    <div class="flex items-center justify-between">
+      <div>
+        <a href="/"
+          ><h1 class="text-2xl">
+            LanceFree<span class="font-bold text-[#14b8a5]">Devs</span>
+          </h1></a
+        >
+      </div>
+
+      <div class="flex items-center space-x-5">
+        <Icon name="linkedin" size="18" color="#6b7280" />
+        <Icon name="instagram" size="18" color="#6b7280" />
+        <Icon name="facebook" size="18" color="#6b7280" />
+        <Icon name="youtube" size="18" color="#6b7280" />
+      </div>
     </div>
 
-    <div>
-      <a href="#">Linkedin</a>
-      <a href="#">Youtube</a>
-      <a href="#">Instagram</a>
-      <a href="#">Facebook</a>
-      <a href="#">Twitter</a>
+    <div class="grid grid-cols-3 mt-5">
+      <div>
+        <h3 class="font-bold mb-4">Important Links</h3>
+        <div class="flex flex-col text-gray-500">
+          <a href="#">Latest Blogs</a>
+          <a href="#">About us</a>
+          <a href="#">Services</a>
+        </div>
+      </div>
+      <div>
+        <h3 class="font-bold mb-4">Supports</h3>
+        <div class="flex flex-col text-gray-500">
+          <a href="#">Sign in</a>
+          <a href="#">Sign up</a>
+        </div>
+      </div>
+      <div>
+        <h3 class="font-bold mb-4">Company</h3>
+        <div class="flex flex-col text-gray-500">
+          <a href="#">Privercy Policy</a>
+          <a href="#">Terms and Conditions</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-5 flex space-x-40">
+      <h1 class="text-gray-500">
+        © All Rights Reserved. (From 2024 June - Present)
+      </h1>
+      <h1 class="text-gray-500">
+        Powered by <a
+          target="_blank"
+          href="https://www.linkedin.com/in/mohamed-rifkan-b38218214/"
+          >Mohamed Rifkan</a
+        > (CEO and Founder of LanceFreeDevs)
+      </h1>
     </div>
   </div>
 </footer>
