--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,66 +1,66 @@
 <section class="min-h-48">
     <div class="max-w-screen-xl mx-auto px-2 flex my-20">
         <div>
-            <div class="grid grid-cols-3 gap-24">
-                <div>
-                    <h3 class="font-bold text-xl">Figma to Code</h3>
-                    <p>
+            <div class="grid grid-cols-3">
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">Figma to Code</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">AI-Intergration</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">AI-Intergration</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">E-Commerce Solutions</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">E-Commerce Solutions</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">Maintaining</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">Maintaining</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">Enterpirse Backend Solutions</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">Enterpirse Backend Solutions</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">Cloud Solutions</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">Cloud Solutions</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">Database Administration</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">Database Administration</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">SEO</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">SEO</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
                 </div>
-                <div>
-                    <h3 class="font-bold text-xl">UI / UX</h3>
-                    <p>
+                <div class="border border-[#4444447c] p-8">
+                    <h3 class="font-bold text-lg mb-2">UI / UX</h3>
+                    <p class="text-gray-500">
                         Lorem ipsum dolor sit, amet consectetur adipisicing
                         elit. Odio, repellat.
                     </p>
