--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,14 +6,18 @@ import Services from "../components/Services.astro";
 import TechStack from "../components/TechStack.astro";
 import Navbar from "../components/Navbar.astro";
 import Testimonials from "../components/Testimonials.astro";
+import LatestBlogs from "../components/LatestBlogs.astro";
+import DevelopmentFlow from "../components/DevelopmentFlow.astro";
 ---
 
 <Layout title="Welcome to Astro.">
   <main>
     <Header />
+    <DevelopmentFlow />
     <Services />
     <TechStack />
     <Testimonials />
+    <LatestBlogs />
   </main>
 </Layout>
 
