--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import FloatingHelpButton from "../components/FloatingHelpButton.astro";
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 
@@ -23,6 +24,8 @@ const { title } = Astro.props;
     <Navbar />
     <slot />
     <Footer />
+
+    <FloatingHelpButton />
   </body>
 </html>
 <style is:global></style>
