--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -3,14 +3,335 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-    <div class="max-w-screen-xl mx-auto px-2">
-        <h1 class="font-bold text-3xl">Blogs</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at
-            suscipit voluptatibus cumque, facilis minima fugit tenetur,
-            voluptate qui, eos ullam voluptatem dicta. Ipsum quidem illum
-            similique, commodi reiciendis accusantium?
-        </p>
+    <div class="max-w-screen-xl mx-auto px-2 my-10">
+        <!-- <h1 class="font-bold text-2xl mb-5">Blogs</h1> -->
+
+        <div>
+            <div class="flex gap-10">
+                <div class="flex-[5]">
+                    <h1 class="font-bold text-3xl mb-6">
+                        Nodejs and Golang Performance Benchmark Test by us and
+                        which one to choose in 2025 Supprising Result
+                    </h1>
+
+                    <img src="https://picsum.photos/800/400" alt="blog" />
+
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Laudantium cupiditate odio accusantium incidunt earum
+                        porro ratione quae doloribus. Eveniet est consequatur
+                        minus architecto placeat corporis nisi explicabo ipsa
+                        labore consectetur!
+                    </p>
+
+                    <b>Title #1</b>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quos, tempora! Nam consectetur velit earum est tempora
+                        eaque saepe error consequuntur dolores placeat, quisquam
+                        voluptatem fuga, qui aut tenetur facere, possimus atque
+                        dolorem illum at dolor magnam? At modi temporibus ipsam
+                        repudiandae, voluptatibus architecto doloribus
+                        recusandae ipsum maxime molestias nobis nemo officia?
+                        Facilis deserunt corporis voluptas. Maiores accusamus
+                        similique dignissimos eos. Odio culpa sequi eligendi
+                        nisi! Mollitia temporibus laborum id blanditiis! Eius
+                        nemo aperiam, a quaerat odio minima enim adipisci
+                        obcaecati nobis eveniet eligendi perferendis quo maxime
+                        beatae magnam incidunt vel molestiae. Ipsam porro
+                        laboriosam, nisi harum odio animi ea illum.
+                    </p>
+                </div>
+                <div class="flex-[2] flex flex-col gap-5">
+                    <h1>Recent Blogs</h1>
+
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex gap-4 items-center">
+                        <div class="flex-1">
+                            <img
+                                src="https://picsum.photos/100/100"
+                                style="w-full h-full object-fit: contain: ;;"
+                                alt="blog"
+                            />
+                        </div>
+                        <div class="flex-[3]">
+                            <h3 class="font-bold">This is blog title</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Cum a, ducimus odit reiciendis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h1>Blogs</h1>
+
+                <div class="grid grid-cols-4 gap-5">
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="rounded-lg border border-[#4444447c] overflow-hidden"
+                    >
+                        <img src="https://picsum.photos/300/200" alt="cover" />
+                        <div class="p-4">
+                            <h1 class="text-lg font-bold my-2">
+                                Node vs Golang Performance
+                            </h1>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Sunt consequatur, nihil alias
+                                qui soluta...
+                            </p>
+                            <a href="#" class="block my-3 underline">Read</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </Layout>
 
