--- a/src/pages/careers.astro
+++ b/src/pages/careers.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-    <div class="max-w-screen-xl mx-auto px-2">
-        <h1 class="font-bold text-3xl">Careers</h1>
+    <div class="max-w-screen-xl mx-auto px-2 my-10">
+        <h1 class="font-bold text-3xl mb-5">Careers</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at
             suscipit voluptatibus cumque, facilis minima fugit tenetur,
