--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,14 +3,43 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-    <div class="max-w-screen-xl mx-auto px-2">
-        <h1 class="font-bold text-3xl">Contact us</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at
-            suscipit voluptatibus cumque, facilis minima fugit tenetur,
-            voluptate qui, eos ullam voluptatem dicta. Ipsum quidem illum
-            similique, commodi reiciendis accusantium?
-        </p>
+    <div class="max-w-screen-xl mx-auto px-2 my-10">
+        <h1 class="font-bold text-3xl mb-5">Contact us</h1>
+        <div class="flex">
+            <div class="flex-1"></div>
+            <div class="flex-1 flex flex-col gap-5">
+                <input
+                    type="text"
+                    class="px-4 py-2 rounded bg-[#fff] outline-none text-black"
+                    placeholder="Name"
+                />
+                <select
+                    name="reason"
+                    id="reason"
+                    class="px-4 py-2 rounded bg-[#fff] outline-none text-black"
+                >
+                    <option value="">I want to discuss the pricing</option>
+                    <option value=""
+                        >What are the Techstack lancefreedev using ?</option
+                    >
+                    <option value="">Maintaing existing application</option>
+                    <option value="">Other</option>
+                </select>
+                <input
+                    type="text"
+                    placeholder="Subject"
+                    class="px-4 py-2 rounded bg-[#fff] outline-none text-black"
+                />
+                <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Describe What you want"
+                    class="px-4 py-2 rounded bg-[#fff] outline-none text-black"
+                ></textarea>
+
+                <button class="send-btn">Send</button>
+            </div>
+        </div>
     </div>
 </Layout>
 
