--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -16,8 +16,8 @@ import Layout from "../layouts/Layout.astro";
 <!-- Backend Solutions -->
 
 <Layout title="Welcome to Astro.">
-    <div class="max-w-screen-xl mx-auto px-2">
-        <h1 class="font-bold text-3xl">Services Page</h1>
+    <div class="max-w-screen-xl mx-auto px-2 my-10">
+        <h1 class="font-bold text-3xl mb-5">Services Page</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at
             suscipit voluptatibus cumque, facilis minima fugit tenetur,
