--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<nav class="h-20 border-b border-[#4444447c]">
+<nav class="z-50 sticky top-0 bg-[#0000006e] backdrop-blur-sm h-20 border-b border-[#4444447c]">
   <div
     class="h-full max-w-screen-xl mx-auto px-2 flex justify-between items-center"
   >
